--- a/src/less/blocks/advantages.less
+++ b/src/less/blocks/advantages.less
@@ -30,7 +30,7 @@
     font-size:15px;
    
     &::before{
-        .LoadPictureForAdvantages(0%,50%,"../../img/advantage-1-illustration.png",); 
+        .LoadPictureForAdvantages(0%,48%,"../../img/advantage-1-illustration.png",); 
         transform: translateX(-50%);  
     }
     & h3{
@@ -64,21 +64,20 @@
         padding-left:128px;
         text-align: left;
 
-        &::before{ 
-      
-            left:53%;
+        &::before{       
+            left:7.5%;
         }
     }
     .advantages__item:not(:first-of-type){
         display: block;
     }
-    
+ 
     .advantages__item:nth-child(2)::before{
-       .LoadPictureForAdvantages(33%, 53%, "../../img/advantage-2-illustration.png");
+       .LoadPictureForAdvantages(35%, 7.5%, "../../img/advantage-2-illustration.png");
        transform: translateX(-50%); 
     }
     .advantages__item:nth-child(3)::before{
-        .LoadPictureForAdvantages(66%,53%,"../../img/advantage-3-illustration.png"); 
+        .LoadPictureForAdvantages(70%,7.5%,"../../img/advantage-3-illustration.png"); 
         transform: translateX(-50%); 
     }
 
@@ -112,15 +111,15 @@
         padding-right: 60px;
     }
     .advantages__item:nth-child(1)::before{
-        .LoadPictureForAdvantages(0%,-32.5%,"../../img/advantage-1-illustration.png");
+        .LoadPictureForAdvantages(0%,12%,"../../img/advantage-1-illustration.png");
         transform: translateX(0%); 
      }
     .advantages__item:nth-child(2)::before{
-        .LoadPictureForAdvantages(0%,0%,"../../img/advantage-2-illustration.png");
+        .LoadPictureForAdvantages(0%,45%,"../../img/advantage-2-illustration.png");
         transform: translateX(0%); 
      }
      .advantages__item:nth-child(3)::before{
-         .LoadPictureForAdvantages(0%,33%,"../../img/advantage-3-illustration.png"); 
+         .LoadPictureForAdvantages(0%,78%,"../../img/advantage-3-illustration.png"); 
          transform: translateX(0%); 
      }
     
