--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -27,17 +27,7 @@
    
 } 
 
-.page-footer__arrow{
-    // position: absolute;
-    // top: 355px;
-    // left:6px;
-    // z-index: 3;
-    position: relative;
-    margin-top: -57px;
-    border:49vw solid transparent;
-    border-top:100px solid @bg-lightgrey;
-    border-bottom: 0;
-}
+
 
 .page-footer__phone-button{
     margin-left: 20px;
@@ -87,6 +77,7 @@ display: inline-block;
     margin-top:60px;
     
 }
+
 
 .page-footer__copyright-link{
     .btn;
@@ -138,37 +129,35 @@ display: inline-block;
     }
     .page-footer__copyright-link{
         .btn;
-        padding: 10px 30px;
+        padding: 15px 6vw;
         color:white;
     }
     .page-footer__phone-button{
         .clear_btn_behavior();
         color:lighten(black,70%);
     }
-    .page-footer__arrow{
-        display: none;
-    }
-    .social-link a{
-        padding:calc(74px / 2) calc(318px / 3);
-        border: 1px solid fade(grey,20%);
-    }
+ 
+    
     .social-link--vk ,
     .social-link--fb{
         margin-right: -7px;
     }    
-    .page-footer__arrow{        
-        margin-left: -75px;
-        margin-top:-5px;
-    border:49vw solid transparent;
-    border-top:100px solid @bg-lightgrey;
-    border-bottom: none;
-    z-index: 3;
-    }
 
-    
+    .social-link a{
+        // padding:37px calc(318px / 3);
+        padding:37px 13.7vw;
+        border: 1px solid fade(grey,20%);
+    }
+    .social-links{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 @media @desktop-widths{
+    .social-links{
+        display: inline;
+    }
     .page-footer{
         margin-bottom: 50px;
     }
@@ -213,6 +202,10 @@ display: inline-block;
     text-align: center;
     position: absolute;
     top:-45px;
-}
-
+    }
+     .page-footer__copyright-link{
+        .btn;
+        padding: 11px 30px;
+        color:white;
+    }
 }
