--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -44,7 +44,7 @@
 } 
 .LoadPictureForAdvantages (@top;@left; @file_path){
     content:url(@file_path);
-    width: 100%;
+    width: 10%;
     position: absolute;
     top:@top;
     left:@left;      
